--- a/html/my_app_api/composer.json
+++ b/html/my_app_api/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=7.4",
         "cakephp/cakephp": "^4.5.0",
-        "cakephp/migrations": "^3.7",
+        "cakephp/migrations": "@stable",
         "cakephp/plugin-installer": "^1.3",
         "mobiledetect/mobiledetectlib": "^3.74",
         "monolog/monolog": "^3.5"
@@ -20,6 +20,7 @@
         "codeception/module-asserts": "^3.0",
         "codeception/module-phpbrowser": "^3.0",
         "josegonzalez/dotenv": "^4.0",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.6"
     },
     "suggest": {
